--- a/web-map/style.css
+++ b/web-map/style.css
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Bebas Neue';
 }
 
-p, span, label {
+p, span, label, li {
   font-family: 'Roboto Condensed';
 }
 
@@ -211,4 +211,22 @@ input[type=range]::-moz-range-thumb {
 input[type=range]::-ms-thumb {
   position: relative;
   top: 50%;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+background-color: rgb(168, 168, 168);
+border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #696868;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #696868;
 }
