--- a/web-map/style.css
+++ b/web-map/style.css
@@ -72,6 +72,7 @@ hr {
   width: 230px;
   white-space: normal !important;
   word-wrap: break-word;
+  z-index: 999;
 }
 
 /* Tooltip title */
@@ -81,6 +82,7 @@ hr {
   color: rgba(0,0,0,0.5);
   font-size: 1.5em;
   max-width: fit-content;
+  line-height: 1em;
 }
 
 .t-t:not(:first-child) {
