--- a/web-map/style.css
+++ b/web-map/style.css
@@ -105,6 +105,18 @@ p, span, label, li {
   font-family: 'Roboto Condensed';
 }
 
+hr {
+  border-top: 1px solid #d6975c;
+  border-bottom: 0;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+/* remove the last hr */
+hr:last-child {
+  display: none;
+}
+
 .location-picker {
   position: absolute;
   top: 10px;
